--- a/exito.html
+++ b/exito.html
@@ -28,16 +28,16 @@
 		<h1>Kross Cerveza Independiente</h1>
 	</header>
 	
-	<section class="welcome producto">
-		<img src="" alt="Pack Cervezas Exclusivas" />
-		<hgroup>
-			<h2>Pre Venta Exclusiva Cerveza Kross</h2>
-			<h3>Inscríbete y obtén una exclusiva promoción de cerveza Kross para ti, son solo 100 cajas</h3>
-		</hgroup>
+	<section class="succes">
+		<h2>Felicitaciones, ya estás inscrito</h2>
+		<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
 		
-		<a href="inscribete.html" class="big btn" title="Inscríbete">Inscríbete</a>
 		
-		<p><span>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</span></p>
+		<div class="promocional">
+			<img src="" alt="Pack Cervezas Exclusivas" />
+			<h4>Cerveza Promocional Kross</h4>
+			<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</p>
+		</div>
 	
 	</section>
 	
