--- a/exito.html
+++ b/exito.html
@@ -8,49 +8,36 @@
 <!-- the "no-js" class is for Modernizr. -->
 
 <head>
-
 	<meta charset="utf-8">
-	
-	
 	<title>Kross Pre Venta Exclusiva</title>
-		
 	<link rel="stylesheet" href="style.css">
-	
 	<script src="/js/modernizr-1.7.min.js"></script>
-
 </head>
-
-<body class="home">
+<body class="exito">
 
 <div class="wrapper">
 
 	<header>
-		<h1>Kross Cerveza Independiente</h1>
+		<h1>Kross - Serie Experimental</h1>
 	</header>
 	
+	<img class="kross_img" src="images/img_kross_110.png" alt="Kross 110 Pack" width="250" height="500" />
+	
 	<section class="succes">
-		<h2>Felicitaciones, ya estás inscrito</h2>
-		<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+				
+		<h2>¡Felicitaciones!<span>Ya estás inscrito</span></h2>
+		<h3>Ah, y además estás participando para ganar poleras Kross 110, bien no?</h3>
+		<h4>Pronto nos pondremos en contacto contigo vía email</h4>
 		
+		<img src="images/bg_gradient.png" alt="Pack Poleras" />
 		
-		<div class="promocional">
-			<img src="" alt="Pack Cervezas Exclusivas" />
-			<h4>Cerveza Promocional Kross</h4>
-			<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</p>
-		</div>
-	
 	</section>
-	
-	
-	<footer>
-		<div class="copyright">2012 Todos los derechos Reservados</div>
-	
-	</footer>
-
-
-
 
 </div>
-  
+ 
+<footer>
+	<div class="copyright">Todos los derechos Reservados - 2012</div>
+</footer>
+
 </body>
 </html>
