--- a/index.html
+++ b/index.html
@@ -8,49 +8,37 @@
 <!-- the "no-js" class is for Modernizr. -->
 
 <head>
-
 	<meta charset="utf-8">
-	
-	
 	<title>Kross Pre Venta Exclusiva</title>
-		
 	<link rel="stylesheet" href="style.css">
-	
 	<script src="/js/modernizr-1.7.min.js"></script>
-
 </head>
-
 <body class="home">
 
 <div class="wrapper">
 
 	<header>
-		<h1>Kross Cerveza Independiente</h1>
+		<h1>Kross - Serie Experimental</h1>
 	</header>
 	
+	<img class="kross_img" src="images/img_kross_110.png" alt="Kross 110 Pack" width="250" height="500" />
+	
 	<section class="welcome producto">
-		<img src="" alt="Pack Cervezas Exclusivas" />
 		<hgroup>
-			<h2>Pre Venta Exclusiva Cerveza Kross</h2>
-			<h3>Inscríbete y obtén una exclusiva promoción de cerveza Kross para ti, son solo 100 cajas</h3>
+			<h2>Pre Venta Exclusiva<br>Relanzamiento Kross 110</h2>
+			<h3>Lo pidieron, lo tienen.</h3>
 		</hgroup>
 		
-		<a href="inscribete.html" class="big btn" title="Inscríbete">Inscríbete</a>
+		<a href="inscribete.html" class="big btn" title="Inscríbete">Ingresa aquí</a>
 		
-		<p><span>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</span></p>
-	
+		<p>Completa este formulario para reservar tus <strong>Kross 110 antes del lanzamiento oficial</strong></p>
 	</section>
 	
-	
-	<footer>
-		<div class="copyright">2012 Todos los derechos Reservados</div>
-	
-	</footer>
-
-
-
-
 </div>
-  
+
+<footer>
+	<div class="copyright">Todos los derechos Reservados - 2012</div>
+</footer>
+
 </body>
 </html>
