versión final beta OK

--- a/exito.html
+++ b/exito.html
@@ -21,7 +21,7 @@
 		<h1>Kross - Serie Experimental</h1>
 	</header>
 	
-	<img class="kross_img" src="images/img_kross_110.png" alt="Kross 110 Pack" width="250" height="500" />
+	<img class="kross_img" src="images/botella_final.png" alt="Kross 110 Pack" />
 	
 	<section class="succes">
 				
@@ -29,7 +29,7 @@
 		<h3>Ah, y además estás participando para ganar poleras Kross 110, bien no?</h3>
 		<h4>Pronto nos pondremos en contacto contigo vía email</h4>
 		
-		<img src="images/bg_gradient.png" alt="Pack Poleras" />
+		<img src="images/premios.png" alt="Pack Poleras" />
 		
 	</section>
 
